--- a/MVC/PizzaHubProj/PizzaHub/PizzaHub.csproj
+++ b/MVC/PizzaHubProj/PizzaHub/PizzaHub.csproj
@@ -5,12 +5,23 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Remove="wwwroot\js\Cart.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="wwwroot\js\Cart.js" />
+  </ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\PizzaHub.Services\PizzaHub.Services.csproj" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Folder Include="Areas\Auth\Data\" />
 	  <Folder Include="Areas\Auth\Models\" />
+	</ItemGroup>
+	<ItemGroup>
+	  <None Include="wwwroot\js\Cart.js" />
 	</ItemGroup>
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
